--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="row">
         <div class="col-lg-4 col-xs-12 col-md-6 " id="container" >
 
-   <blockquote id="head">Chicken</blockquote>
+   <section id="head1">Chicken</section>
   <p  >
 
     
@@ -23,12 +23,12 @@
   consequat.   </p>
   </div>
   <div class="col-lg-4 col-xs-12 col-md-6 " id="container">
- <blockquote id="head">Beef</blockquote>
+ <section id="head2">Beef</section>
  <p >
  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta beatae voluptatibus veniam placeat iure unde assumenda porro neque voluptate esse sit magnam facilis labore odit, provident a ea! Nulla, minima.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nemo vitae, cupiditate odio magnam reprehenderit esse eum reiciendis repellendus incidunt sequi! Autem, laudantium, accusamus. Doloribus tempora alias minima laborum, provident!</p>
 </div>
 <div class="col-lg-4 col-xs-12 col-md-12 " id="container">
-    <blockquote id="head">Sushi</blockquote>
+    <section id="head3">Sushi</section>
 <p >
     
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta beatae voluptatibus veniam placeat iure unde assumenda porro neque voluptate esse sit magnam facilis labore odit, provident a ea! Nulla, minima.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nemo vitae, cupiditate odio magnam reprehenderit esse eum reiciendis repellendus incidunt sequi! Autem, laudantium, accusamus. Doloribus tempora alias minima laborum, provident!</p>
